feat: Implement Spring Data JPA projections for Order entities, refactor OrderRepository and OrderService to utilize them, and add user creation flow documentation.